Update scala3-library to 3.2.1 (#1179)
* Update scala3-library to 3.2.1

Co-authored-by: Cédric Chantepie <cchantep@users.noreply.github.com>